# multi-agent-shipping

./: .env.example  .gitignore  README.md  agent.py  docker-compose.local.yml  pyproject.toml
.github/workflows/: ci.yml
agents/: cart.py  inventory.py  order_data.py  products.py  search.py
data/: README.md
databases/: README.md
docs/: DEVELOPMENT.md  MONOREPO.md
infra/: README.md
policymesh/: __init__.py  __main__.py  config.py  dev.py  toolbox.py
prompts/: add-item-prompt.txt  agent-prompt.txt  search-prompt.txt
scripts/: dev.ps1  dev.sh
shipping/: __init__.py  agent.py
shipping/agents/: inquiry.py  shipping.py
shopping/: agent.py
shopping/agents/: cart.py  datastore.py  inventory.py  order_data.py  product_info.py  search.py
storefront/: __init__.py  agent.py
tests/: conftest.py  test_config.py  test_repository_layout.py  test_smoke.py  test_tools.py
