[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "policymesh"
version = "0.1.0"
description = "Policy-gated multi-agent ecommerce demo and production architecture starter."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "a2a-sdk>=0.3.6",
  "google-adk>=1.17.0",
  "google-cloud-discoveryengine>=0.11.0",
  "pydantic>=2.7",
  "toolbox-core>=0.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.6.0",
]

[project.scripts]
policymesh = "policymesh.dev:main"

[tool.setuptools]
packages = ["policymesh", "shopping", "shopping.agents", "shipping", "shipping.agents", "storefront"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
